<resources>
    <string name="app_name">Seminário</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to menu -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="disciplina">Disciplina</string>
    <string name="professor">Professor</string>
    <string name="img_prof">Imagem do professor</string>
    <string name="codprof">Codigo</string>
    <string name="ano">Ano</string>
    <string name="notas">Notas</string>
    <string name="n1">N1</string>
    <string name="n2">N2</string>
    <string name="n3">N3</string>
    <string name="m1">M1</string>
    <string name="vp1">VP1</string>
    <string name="vp2">VP2</string>
    <string name="vp3">VP3</string>
    <string name="media">Média</string>
</resources>
