<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="157dp"
        android:src="@drawable/login_logo"
        tools:ignore="ContentDescription"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="121dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="98dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_marginEnd="23dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textColor="#FFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="64dp" />


</android.support.constraint.ConstraintLayout>